File Structure and Fat Arrow Functions

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+.main {
+  width: 60vw;
+  margin: auto;
+}
+
+.heading {
+  color: #6e046e;
+  text-align: center;
+  font-size: 2.7rem;
+}
